# phosphor-bmc-code-mgmt

./: .clang-format  .clang-tidy  .gitignore  BMC_version.cpp  BMC_version.hpp  CompilaBmc.sh  MAINTAINERS  Makefile.am  Makefile.in.bckp  OWNERS  README.md  \  a  activation.cpp  activation.hpp  activation_software_manager.cpp  activation_software_manager.hpp  bmc_version.cpp  bmc_version.hpp  configure.ac  delete_manager.cpp  delete_manager.hpp  delete_manager_main.cpp  detect-slot-aspeed.sh  download_manager.cpp  download_manager.hpp  download_manager_main.cpp  elog-errors.hpp  firmwareUpdate.hpp  flash.hpp  gen-bios-tar  groups  image_manager.cpp  image_manager.hpp  image_manager_main.cpp  image_verify.cpp  image_verify.hpp  images.hpp  item_updater.cpp  item_updater.hpp  (+60 more)
bios-spi/: NotifyWatch.hpp  README.md  bios_software_manager.cpp  host_power.cpp  host_power.hpp  main.cpp  meson.build  spi_device.cpp  spi_device.hpp  spi_device_code_updater.cpp  spi_device_code_updater.hpp  xyz.openbmc_project.Software.BIOS.service
bmc/code-update-manager/: main.cpp  meson.build  update_manager.cpp  update_manager.hpp  xyz.openbmc_project.Software.Update.Manager.service.in
bmc/side-switch/: meson.build  phosphor-bmc-side-switch.service
common/: README.md  meson.build
common/i2c/: i2c.cpp  i2c.hpp  meson.build
common/include/: NotifyWatch.hpp  dbus_helper.hpp  device.hpp  device_config.hpp  gpio_controller.hpp  host_power.hpp  pmbus.hpp  software.hpp  software_config.hpp  software_manager.hpp  software_update.hpp  utils.hpp
common/pldm/: meson.build  package_parser.cpp  package_parser.hpp  pldm_package_util.cpp  pldm_package_util.hpp  pldm_util.cpp  types.hpp  utils.hpp
common/src/: device.cpp  device_config.cpp  gpio_controller.cpp  host_power.cpp  pmbus.cpp  software.cpp  software_config.cpp  software_manager.cpp  software_update.cpp  utils.cpp
cpld/: README.md  cpld.cpp  cpld.hpp  cpld_code_updater.cpp  cpld_code_updater.hpp  cpld_fw_handler.cpp  cpld_fw_handler.hpp  cpld_interface.cpp  cpld_interface.hpp  cpld_software_manager.cpp  cpld_software_manager.hpp  lattice.cpp  lattice.hpp  main.cpp  meson.build  xyz.openbmc_project.Software.CPLD.service  xyz.openbmc_project.Software.CPLDFirmware.service
cpld/altera/: max10_base_cpld.cpp  max10_base_cpld.hpp  max10_cpld.cpp  max10_cpld.hpp  max10_cpld_factory.cpp  max10_cpld_factory.hpp
cpld/lattice/: cpld_fw_handler.hpp  interface.cpp  interface.hpp  lattice.cpp  lattice.hpp  lattice_base_cpld.cpp  lattice_base_cpld.hpp  lattice_cpld_factory.cpp  lattice_cpld_factory.hpp  lattice_xo3_cpld.cpp  lattice_xo3_cpld.hpp  lattice_xo5_65t_cpld.cpp  lattice_xo5_65t_cpld.hpp  lattice_xo5_cpld.cpp  lattice_xo5_cpld.hpp  lattice_xo5_cpld2.cpp  lattice_xo5_cpld2.hpp  lattice_xo5d_cpld.cpp  lattice_xo5d_cpld.hpp  xo2xo3.cpp  xo2xo3.hpp  xo5.cpp  xo5.hpp
eeprom-device/: README.md  eeprom_device.cpp  eeprom_device.hpp  eeprom_device_code_updater.cpp  eeprom_device_code_updater.hpp  eeprom_device_software_manager.cpp  eeprom_device_software_manager.hpp  eeprom_device_version.cpp  eeprom_device_version.hpp  main.cpp  meson.build  xyz.openbmc_project.Software.EEPROMDevice.service  xyz.openbmc_project.Software.EEPROMDevice.service.in
eeprom-device/pt5161l/: pt5161l.cpp  pt5161l.hpp
eeprom-device/version-providers/: pt5161l.cpp  pt5161l.hpp  version_provider.cpp  version_provider.hpp
fw-update/: README.md  meson.build
fw-update/common/: code_updater.cpp  code_updater.hpp  device.cpp  device.hpp  fw_manager.cpp  fw_manager.hpp  meson.build  pldm_fw_update_verifier.cpp  pldm_fw_update_verifier.hpp  software-activation.cpp  software-activation.hpp  software-association-definitions.cpp  software-association-definitions.hpp  software-update.cpp  software-update.hpp  software-version.cpp  software-version.hpp  software.cpp  software.hpp
fw-update/test/: meson.build
fw-update/tool/: meson.build
i2c-vr/: README.md  i2c_vr_device.cpp  i2c_vr_device.hpp  i2c_vr_device_code_updater.cpp  i2c_vr_device_code_updater.hpp  i2cvr_device.cpp  i2cvr_device.hpp  i2cvr_software_manager.cpp  i2cvr_software_manager.hpp  main.cpp  meson.build  vr.cpp  vr.hpp  xyz.openbmc_project.Software.I2CVR.service
i2c-vr/dummyDevice/: dummyDevice.cpp  dummyDevice.hpp
i2c-vr/isl69269/: isl69269.cpp  isl69269.hpp
i2c-vr/mps/: mp292x.hpp  mp297x.cpp  mp297x.hpp  mp2x6xx.cpp  mp2x6xx.hpp  mp5998.cpp  mp5998.hpp  mp994x.cpp  mp994x.hpp  mpq87xx.cpp  mpq87xx.hpp  mps.cpp  mps.hpp  mpx9xx.cpp  mpx9xx.hpp
i2c-vr/tda38640a/: tda38640a.cpp  tda38640a.hpp
i2c-vr/test/: main.cpp  meson.build
i2c-vr/xdp71x/: xdp71x.cpp  xdp71x.hpp
i2c-vr/xdpe1x2xx/: xdpe1x2xx.cpp  xdpe1x2xx.hpp
mmc/: flash.cpp  item_updater_helper.cpp  meson.build  obmc-flash-mmc-mirroruboot.service.in  obmc-flash-mmc-mount.service.in  obmc-flash-mmc-setprimary@.service  obmc-flash-mmc-umount.service.in  obmc-flash-mmc@.service
pcieswitch/: README.md  meson.build  pcieswitch_software_manager.cpp  pcieswitch_software_manager.hpp  spi_device.cpp  spi_device.hpp  xyz.openbmc_project.Software.PCIESWITCH.service
test/: Makefile.am  README.md  meson.build  test_update_interface.cpp  utest.cpp
test/bios/: test_bios_spi.cpp
test/bios-spi/: meson.build  test_bios_spi.cpp
test/common/: meson.build  software_update.cpp  test_device_config.cpp  test_software_config.cpp  test_software_update.cpp
test/create_package/: component_image_info_area.cpp  meson.build  (+4 more)
tpm/: README.md  meson.build  tpm_device.cpp  tpm_device.hpp  tpm_software_manager.cpp  tpm_software_manager.hpp  xyz.openbmc_project.Software.TPM.service
ubi/: Makefile.am.include  flash.cpp  force-reboot.service  item_updater_helper.cpp  meson.build  obmc-flash-bmc-ubiremount.service.in  obmc-flash-bmc-ubiro-remove@.service.in
usb/: 70-bmc-usb.rules  meson.build  usb_code_update_main.cpp  usb_manager.cpp  usb_manager.hpp  usb_manager_main.cpp  usb_update.sh  utils.cpp  utils.hpp
vr-i2c/: i2c_vr_device.cpp  i2c_vr_device.hpp  i2c_vr_device_code_updater.cpp  i2c_vr_device_code_updater.hpp  main.cpp  meson.build  vr.cpp  vr.hpp
(+315 files in other folders)
